--- a/demand_server/templates/main.html
+++ b/demand_server/templates/main.html
@@ -1128,7 +1128,7 @@ document.querySelector('.event-banner').addEventListener('mouseleave', () => {
 });
     </script>
 
-    <script src="{% static 'js/banner.js' %}"></script>
+    <!-- <script src="{% static 'js/banner.js' %}"></script> -->
 
     <!-- 통계 섹션 --> 
     <section class="statistics-section">
